--- a/client/freedom/package.json
+++ b/client/freedom/package.json
@@ -28,5 +28,14 @@
     "postcss": "^8.4.35",
     "tailwind": "^4.0.0",
     "vite": "^5.1.6"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    },
+    "esbuild": "0.19.12"
   }
 }
